dfir_rs/tests/compile-fail/nightly/surface_singleton_mut_mixed_group.stderr
error: Cannot mix shared (`#`) and mutable (`#mut`) references in the same access group.
 --> tests/compile-fail/nightly/surface_singleton_mut_mixed_group.rs:6:50
  |
6 |         source_iter([1_i32]) -> map(|x| x + #{0} my_val) -> for_each(|_| {});
  |                                                  ^^^^^^

error: Cannot mix shared (`#`) and mutable (`#mut`) references in the same access group.
 --> tests/compile-fail/nightly/surface_singleton_mut_mixed_group.rs:7:53
  |
7 |         source_iter([2_i32]) -> map(|x| { *#{0} mut my_val += x; x }) -> for_each(|_| {});
  |                                                     ^^^^^^
